Change sidebar to stop overflowing over content
By changing sidebar CSS from max-content to min
content, no longer causes those issues.

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ header {
   background-color: var(--light-gray);
   display: grid;
   grid-template-rows: auto 1fr;
-  min-width: max-content;
+  min-width: min-content;
   align-self: stretch;
   height: 100%;
 
@@ -49,7 +49,8 @@ header {
   display: grid;
   grid-auto-rows: min-content;
   gap: 1em;
-  /* grid-template-columns: 200px; */
+  min-width: 0;
+  /* grid-template-columns: 100%; */
 }
 
 /* .project {
@@ -71,6 +72,11 @@ header {
   grid-auto-columns: 20px;
   grid-auto-flow: column;
   background-color: var(--light-gray);
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 100%;
 
   &:hover {
     background-color: white;
@@ -94,7 +100,7 @@ header {
 
 .project>button:nth-child(1) {
   border: none;
-  margin: none;
+  margin: 0;
 }
 
 .project>button:not(:nth-child(1)) {
